--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -124,12 +124,28 @@
         </executions>
       </plugin>
       
-      <!-- Copy the changed files into the dist directory (so that Shib install works correctly). -->
+      <!-- Copy additional files -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.8</version>
         <executions>
+          <!-- Copy the modifications we made to the files in the webapp directory -->
+          <execution>
+            <id>copy-webapp</id>
+            <phase>process-resources</phase>
+            <configuration>
+              <target name="copy-webapp">
+                <copy todir="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/webapp" overwrite="true">
+                  <fileset dir="${project.basedir}/src/main/webapp"/>
+                </copy>                
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+          <!-- Copy the changed files into the dist directory (so that Shib install works correctly). -->
           <execution>
             <id>copy-to-dist</id>
             <phase>process-resources</phase>
