--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -45,10 +45,25 @@
 
   <dependencies>
   
+    <dependency>  
+      <groupId>se.litsec.opensaml</groupId>
+      <artifactId>opensaml3-ext</artifactId>
+    </dependency>  
+  
     <dependency>
       <groupId>se.litsec.sweid.idp</groupId>
       <artifactId>shibboleth-attribute-support</artifactId>
       <version>${project.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>se.litsec.sweid.idp</groupId>
+      <artifactId>shibboleth-metadata-support</artifactId>
+      <version>${project.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
@@ -82,7 +97,7 @@
               </artifactItems>
             </configuration>
           </execution>
-          
+           
           <execution>
             <id>copy-dependencies</id>
             <phase>package</phase>
@@ -153,7 +168,7 @@
               <target name="copy-to-dist">
                 <copy todir="${project.build.directory}/shibboleth-identity-provider-${shibboleth.version}/dist/conf" overwrite="true" force="true">
                   <fileset dir="${basedir}/src/main/resources/conf" includes="**/*">
-                    <type type="file" />           
+                    <type type="file" />
                   </fileset>
                   <mapper type="glob" from="*" to="*.dist" />
                 </copy>
