--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,11 @@
 
     <!-- Versions on dependencies -->
     <shibboleth.version>3.3.0</shibboleth.version>
-    <opensaml.version>3.2.0</opensaml.version>
+    <opensaml.version>3.3.0</opensaml.version>
+    <opensaml-ext.version>0.9-SNAPSHOT</opensaml-ext.version>
+    <spring.version>4.3.2.RELEASE</spring.version>
 
-    <slf4j.version>1.7.5</slf4j.version>
-
+    <slf4j.version>1.7.12</slf4j.version>
     <junit.version>4.12</junit.version>
   </properties>
 
@@ -73,13 +74,29 @@
 
     <dependencies>
 
+      <dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>javax.servlet-api</artifactId>
+	<version>3.1.0</version>
+	<scope>provided</scope>
+      </dependency>
+
+      <!-- OpenSAML extensions -->
+      <dependency>
+	<groupId>se.litsec.opensaml</groupId>
+	<artifactId>opensaml3-ext</artifactId>
+	<version>${opensaml-ext.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+
       <!-- OpenSAML -->
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml-core</artifactId>
         <version>${opensaml.version}</version>
         <type>jar</type>
-        <scope>compile</scope>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -87,7 +104,7 @@
         <artifactId>opensaml-saml-api</artifactId>
         <version>${opensaml.version}</version>
         <type>jar</type>
-        <scope>compile</scope>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -95,7 +112,7 @@
         <artifactId>opensaml-saml-impl</artifactId>
         <version>${opensaml.version}</version>
         <type>jar</type>
-        <scope>compile</scope>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -105,13 +122,20 @@
         <scope>provided</scope>
       </dependency>
 
+      <dependency>
+	<groupId>org.opensaml</groupId>
+	<artifactId>opensaml-xmlsec-api</artifactId>
+	<version>${opensaml.version}</version>
+	<scope>provided</scope>
+      </dependency>
+
       <!-- Shibboleth -->
       <dependency>
         <groupId>net.shibboleth.utilities</groupId>
         <artifactId>java-support</artifactId>
         <version>7.3.0</version>
         <type>jar</type>
-        <scope>compile</scope>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -128,13 +152,42 @@
         <scope>provided</scope>
       </dependency>
 
+      <!-- Spring -->
+      <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-core</artifactId>
+	<version>${spring.version}</version>
+	<scope>provided</scope>
+      </dependency>
 
+      <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-context</artifactId>
+	<version>${spring.version}</version>
+	<scope>provided</scope>
+      </dependency>
+
+      <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-beans</artifactId>
+	<version>${spring.version}</version>
+	<scope>provided</scope>
+      </dependency>
+
+      <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-web</artifactId>
+	<version>${spring.version}</version>
+	<scope>provided</scope>
+      </dependency>
+
+      <!-- Misc -->
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.7</version>
+        <version>2.9</version>
         <type>jar</type>
-        <scope>compile</scope>
+	<scope>provided</scope>
       </dependency>
 
       <dependency>
@@ -142,7 +195,7 @@
         <artifactId>commons-lang</artifactId>
         <version>2.4</version>
         <type>jar</type>
-        <scope>compile</scope>
+	<scope>provided</scope>
       </dependency>
 
       <!-- For logging -->
@@ -151,6 +204,7 @@
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
         <type>jar</type>
+	<scope>provided</scope>
       </dependency>
 
       <!-- For testing -->
@@ -242,6 +296,7 @@
 
   <modules>
     <module>attribute-support</module>
+    <module>metadata-support</module>
     <module>idp</module>
   </modules>
 
