--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -65,6 +65,14 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>se.litsec.sweid.idp</groupId>
+      <artifactId>shibboleth-authn-support</artifactId>
+      <version>${project.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>    
 
   </dependencies>
 
