--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <opensaml.version>3.3.0</opensaml.version>
     <opensaml-ext.version>0.9-SNAPSHOT</opensaml-ext.version>
     <spring.version>4.3.2.RELEASE</spring.version>
+    <spring.webflow.version>2.4.4.RELEASE</spring.webflow.version>
 
     <slf4j.version>1.7.12</slf4j.version>
     <junit.version>4.12</junit.version>
@@ -129,6 +130,13 @@
         <scope>provided</scope>
       </dependency>
 
+      <dependency>
+        <groupId>org.opensaml</groupId>
+        <artifactId>opensaml-messaging-api</artifactId>
+        <version>${opensaml.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
       <!-- Shibboleth -->
       <dependency>
         <groupId>net.shibboleth.utilities</groupId>
@@ -141,6 +149,13 @@
       <dependency>
         <groupId>net.shibboleth.idp</groupId>
         <artifactId>idp-authn-api</artifactId>
+        <version>${shibboleth.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>net.shibboleth.idp</groupId>
+        <artifactId>idp-profile-api</artifactId>
         <version>${shibboleth.version}</version>
         <scope>provided</scope>
       </dependency>
@@ -185,6 +200,13 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
         <version>${spring.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.webflow</groupId>
+        <artifactId>spring-webflow</artifactId>
+        <version>${spring.webflow.version}</version>
         <scope>provided</scope>
       </dependency>
 
@@ -302,6 +324,7 @@
   </build>
 
   <modules>
+    <module>shibboleth-extensions</module>
     <module>attribute-support</module>
     <module>metadata-support</module>
     <module>authn-support</module>
