--- a/attribute-support/pom.xml
+++ b/attribute-support/pom.xml
@@ -46,6 +46,11 @@
 
     <dependency>
       <groupId>net.shibboleth.idp</groupId>
+      <artifactId>idp-saml-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>net.shibboleth.idp</groupId>
       <artifactId>idp-attribute-api</artifactId>
     </dependency>
 
