--- a/authn-support/pom.xml
+++ b/authn-support/pom.xml
@@ -81,12 +81,24 @@
 
     <dependency>
       <groupId>net.shibboleth.idp</groupId>
+      <artifactId>idp-saml-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>net.shibboleth.idp</groupId>
       <artifactId>idp-authn-api</artifactId>
     </dependency>
 
     <dependency>
       <groupId>net.shibboleth.utilities</groupId>
       <artifactId>java-support</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>se.litsec.sweid.idp</groupId>
+      <artifactId>shibboleth-attribute-support</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
