--- a/metadata-support/pom.xml
+++ b/metadata-support/pom.xml
@@ -73,16 +73,16 @@
       <groupId>org.opensaml</groupId>
       <artifactId>opensaml-core</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.opensaml</groupId>
       <artifactId>opensaml-saml-api</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xmlsec-api</artifactId>
-    </dependency>    
+    </dependency>
 
     <dependency>
       <groupId>net.shibboleth.utilities</groupId>
@@ -93,6 +93,18 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <scope>test</scope>
+   </dependency>    
 
   </dependencies>
 
