--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,14 @@
         <type>jar</type>
         <scope>test</scope>
       </dependency>
+      
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>${slf4j.version}</version>
+        <scope>test</scope>
+        <type>jar</type>
+      </dependency>      
 
       <dependency>
         <groupId>log4j</groupId>
