--- a/idp/src/main/resources/conf/idp.properties
+++ b/idp/src/main/resources/conf/idp.properties
@@ -43,6 +43,10 @@ idp.encryption.cert = %{idp.home}/credentials/idp-encryption.crt
 idp.metadata.signing.key=%{idp.home}/credentials/metadata-signing.key
 idp.metadata.signing.cert=%{idp.home}/credentials/metadata-signing.crt
 
+# Certificate where a new IdP signing certificate may be place before
+# a signing key rollover is performed.
+idp.metadata.additional-signing-certs=%{idp.home}/metadata/additional-certs
+
 
 # Sets the bean ID to use as a default security configuration set
 #idp.security.config = shibboleth.DefaultSecurityConfiguration
