Changed version on dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <!-- Versions on dependencies -->
     <shibboleth.version>3.3.1</shibboleth.version>
     <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>0.9-SNAPSHOT</opensaml-ext.version>
+    <opensaml-ext.version>0.9</opensaml-ext.version>
     <spring.version>4.3.2.RELEASE</spring.version>
     <spring.webflow.version>2.4.4.RELEASE</spring.webflow.version>
 
