--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <shibboleth.version>3.3.1</shibboleth.version>
     <opensaml.version>3.3.0</opensaml.version>
     <opensaml-ext.version>0.9</opensaml-ext.version>
+    <opensaml.swedish-eid.version>0.9</opensaml.swedish-eid.version>
     <spring.version>4.3.2.RELEASE</spring.version>
     <spring.webflow.version>2.4.4.RELEASE</spring.webflow.version>
 
@@ -90,6 +91,14 @@
         <type>jar</type>
         <scope>compile</scope>
       </dependency>
+      
+      <dependency>
+        <groupId>se.litsec.opensaml.sweid</groupId>
+        <artifactId>swedish-eid-opensaml3</artifactId>
+        <version>${opensaml.swedish-eid.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>      
 
       <!-- OpenSAML -->
       <dependency>
