--- a/pom.xml
+++ b/pom.xml
@@ -4,355 +4,17 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>se.litsec.sweid.idp</groupId>
-  <artifactId>shibboleth-base-parent</artifactId>
+  <artifactId>builder-pom</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0</version>
 
-  <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
-  <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
+  <name>Swedish eID :: Builder POM for Swedish eID :: Shibboleth IdP base</name>
+  <description>Builder POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
   <url>https://github.com/litsec/swedish-eid-shibboleth-base</url>
 
-  <licenses>
-    <license>
-      <name>GNU General Public License, Version 3</name>
-      <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
-      <distribution>repo</distribution>
-      <comments>A free, copyleft license for software and other kinds of works</comments>
-    </license>
-  </licenses>
-
-  <scm>
-    <connection>scm:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
-    <developerConnection>scm:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
-    <url>https://github.com/litsec/swedish-eid-shibboleth-base/tree/master</url>
-  </scm>
-
-  <developers>
-    <developer>
-      <name>Martin Lindström</name>
-      <email>martin.lindstrom@litsec.se</email>
-      <organization>Litsec AB</organization>
-      <organizationUrl>http://www.litsec.se</organizationUrl>
-    </developer>
-  </developers>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-
-    <!-- Versions on dependencies -->
-    <shibboleth.version>3.3.1</shibboleth.version>
-    <opensaml.version>3.3.0</opensaml.version>
-    <opensaml-ext.version>0.9.1-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>0.9.1-SNAPSHOT</opensaml.swedish-eid.version>
-    <spring.version>4.3.2.RELEASE</spring.version>
-    <spring.webflow.version>2.4.4.RELEASE</spring.webflow.version>
-
-    <slf4j.version>1.7.12</slf4j.version>
-    <junit.version>4.12</junit.version>
-  </properties>
-
-  <repositories>
-    <repository>
-      <id>shibboleth</id>
-      <name>Shibboleth Maven Repo</name>
-      <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
-
-  <dependencyManagement>
-
-    <dependencies>
-
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <!-- OpenSAML extensions -->
-      <dependency>
-        <groupId>se.litsec.opensaml</groupId>
-        <artifactId>opensaml3-ext</artifactId>
-        <version>${opensaml-ext.version}</version>
-        <type>jar</type>
-        <scope>compile</scope>
-      </dependency>
-      
-      <dependency>
-        <groupId>se.litsec.opensaml.sweid</groupId>
-        <artifactId>swedish-eid-opensaml3</artifactId>
-        <version>${opensaml.swedish-eid.version}</version>
-        <type>jar</type>
-        <scope>compile</scope>
-      </dependency>      
-
-      <!-- OpenSAML -->
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-core</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-saml-api</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-saml-impl</artifactId>
-        <version>${opensaml.version}</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-profile-api</artifactId>
-        <version>${opensaml.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-xmlsec-api</artifactId>
-        <version>${opensaml.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml-messaging-api</artifactId>
-        <version>${opensaml.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <!-- Shibboleth -->
-      <dependency>
-        <groupId>net.shibboleth.utilities</groupId>
-        <artifactId>java-support</artifactId>
-        <version>7.3.0</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>net.shibboleth.idp</groupId>
-        <artifactId>idp-authn-api</artifactId>
-        <version>${shibboleth.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>net.shibboleth.idp</groupId>
-        <artifactId>idp-saml-api</artifactId>
-        <version>${shibboleth.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>net.shibboleth.idp</groupId>
-        <artifactId>idp-profile-api</artifactId>
-        <version>${shibboleth.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>net.shibboleth.idp</groupId>
-        <artifactId>idp-attribute-api</artifactId>
-        <version>${shibboleth.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>net.shibboleth.idp</groupId>
-        <artifactId>idp-attribute-resolver-api</artifactId>
-        <version>${shibboleth.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <!-- Spring -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>${spring.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-beans</artifactId>
-        <version>${spring.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${spring.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.springframework.webflow</groupId>
-        <artifactId>spring-webflow</artifactId>
-        <version>${spring.webflow.version}</version>
-        <scope>provided</scope>
-      </dependency>
-
-      <!-- Misc -->
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>2.9</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>2.4</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <!-- For logging -->
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-        <type>jar</type>
-        <scope>provided</scope>
-      </dependency>
-
-      <!-- For testing -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${slf4j.version}</version>
-        <type>jar</type>
-        <scope>test</scope>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>${slf4j.version}</version>
-        <scope>test</scope>
-        <type>jar</type>
-      </dependency>      
-
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.16</version>
-        <scope>test</scope>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>javax.jms</groupId>
-            <artifactId>jms</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.sun.jdmk</groupId>
-            <artifactId>jmxtools</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>com.sun.jmx</groupId>
-            <artifactId>jmxri</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-
-    </dependencies>
-
-  </dependencyManagement>
-
-  <build>
-
-    <pluginManagement>
-
-      <plugins>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.3</version>
-          <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.6</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>2.6.1</version>
-          <configuration>
-            <filesets>
-              <fileset>
-                <directory>test-output</directory>
-              </fileset>
-            </filesets>
-          </configuration>
-        </plugin>
-
-      </plugins>
-
-    </pluginManagement>
-
-  </build>
-
   <modules>
-    <module>shibboleth-extensions</module>
-    <module>attribute-support</module>
-    <module>metadata-support</module>
-    <module>authn-support</module>
-    <module>idp</module>
+    <module>dependency-bom</module>
+    <module>parent-pom</module>
   </modules>
 
 </project>
