Converted metadata publish and external auth own into servlets

--- a/idp/src/main/resources/conf/services.properties
+++ b/idp/src/main/resources/conf/services.properties
@@ -69,7 +69,7 @@ idp.httpclient.filecaching.cacheDirectory = %{idp.home}/tmp/httpClientCache
 # encrypted SignMessages.
 #
 
-#idp.service.signmessage-decrypt-service.resources = swedish-eid.SignMessageDecryptionResources
+#idp.service.signmessage-decrypt-service.resources = sweid.SignMessageDecryptionResources
 #idp.service.signmessage-decrypt-service.failFast = true
 idp.service.signmessage-decrypt-service.checkInterval = PT15M
 
