--- a/idp/src/main/webapp/WEB-INF/web.xml
+++ b/idp/src/main/webapp/WEB-INF/web.xml
@@ -131,6 +131,24 @@
       <servlet-name>metadata-publisher</servlet-name>
       <url-pattern>/metadata/*</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+      <servlet-name>extauthn</servlet-name>
+      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+      <init-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>${idp.home}/system/conf/shibext-mvc-beans.xml, ${idp.home}/conf/authn/external-authn-mvc-beans.xml</param-value>
+      </init-param>
+      <init-param>
+        <param-name>contextClass</param-name>
+        <param-value>net.shibboleth.ext.spring.context.DelimiterAwareApplicationContext</param-value>
+      </init-param>
+      <load-on-startup>3</load-on-startup>      
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>extauthn</servlet-name>
+      <url-pattern>/extauth/*</url-pattern>
+    </servlet-mapping>    
 
     <!-- Servlet protected by container used for RemoteUser authentication -->
     <!-- 
