--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -22,8 +22,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
-    <developerConnection>scm:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
+    <connection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
+    <developerConnection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
     <url>https://github.com/litsec/swedish-eid-shibboleth-base/tree/master</url>
   </scm>
 
