--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,21 @@
   <description>Builder POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
   <url>https://github.com/litsec/swedish-eid-shibboleth-base</url>
 
+  <licenses>
+    <license>
+      <name>GNU General Public License, Version 3</name>
+      <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+      <distribution>repo</distribution>
+      <comments>A free, copyleft license for software and other kinds of works</comments>
+    </license>
+  </licenses>
+
+  <scm>
+    <connection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</connection>
+    <developerConnection>scm:git:https://github.com/litsec/swedish-eid-shibboleth-base.git</developerConnection>
+    <url>https://github.com/litsec/swedish-eid-shibboleth-base/tree/master</url>
+  </scm>
+
   <distributionManagement>
     <snapshotRepository>
       <id>eidassh</id>
@@ -27,5 +42,15 @@
     <module>dependency-bom</module>
     <module>parent-pom</module>
   </modules>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
